tests/ui/c-variadic/no-closure.stderr
error[E0743]: C-variadic type `...` may not be nested inside another type
  --> $DIR/no-closure.rs:6:35
   |
LL | const F: extern "C" fn(...) = |_: ...| {};
   |                                   ^^^

error: unexpected `...`
  --> $DIR/no-closure.rs:10:14
   |
LL |     let f = |...| {};
   |              ^^^ not a valid pattern
   |
   = note: only `extern "C"` and `extern "C-unwind"` functions may have a C variable argument list

error[E0743]: C-variadic type `...` may not be nested inside another type
  --> $DIR/no-closure.rs:13:17
   |
LL |     let f = |_: ...| {};
   |                 ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0743`.
